Pokemon Search and Add API was documented in Swagger UI. Created EmptyPokemonExample to be displayed as a response in documentation.
